objects/ASI_CRM_CN_PH_Payee_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Cash_Amount__c</fullName>
        <label>Cash Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Cash_Discount__c</fullName>
        <label>Cash / Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Cash_Payee_Name_T1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Payee</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN CRM Supplier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Header Payee Line Item</relationshipLabel>
        <relationshipName>Payment_Header_Payee_Line_Itme1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Comfirm_Receipt__c</fullName>
        <label>Confirm Receipt?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirm Receipt</fullName>
                </value>
                <value>
                    <fullName>No Need Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Discount_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_ETL_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Instruction_Send_Date__c</fullName>
        <label>Instruction Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Instruction_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instruction Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Instruction_Sent_Time__c</fullName>
        <label>Instruction Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Batch_Number__c</fullName>
        <label>JDE Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Document_Company__c</fullName>
        <label>JDE Document Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Document_Number__c</fullName>
        <label>JDE Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Document_Type__c</fullName>
        <label>JDE Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_EDI_Batch_Number__c</fullName>
        <label>JDE EDI Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_EDI_Transaction_Number__c</fullName>
        <label>JDE EDI Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Paid_Amt__c</fullName>
        <label>JDE Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet_Name__c</fullName>
        <formula>BLANKVALUE(ASI_CRM_CN_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_Chi_Name__c,  BLANKVALUE( ASI_CRM_CN_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_Legal_Name__c , ASI_CRM_CN_Payment_Request__r.ASI_CRM_CN_OutletWS__r.Name) )</formula>
        <label>Outlet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payee_Name_T1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Name (T1)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Payee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Header Payee Line Item (Payee Name (T1))</relationshipLabel>
        <relationshipName>Payment_Header_Payee_Line_Itme</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payee_Name_T2__c</fullName>
        <label>Payee Name (T2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payee_Name_T2_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee Name (T2)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Payee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Header Payee Line Item (Payee Name (T2))</relationshipLabel>
        <relationshipName>Payment_Header_Payee_Line_Itme1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payee_Name__c</fullName>
        <label>Payee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payee_T1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payee (T1)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Outlet, Wholesales (CN)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Header Payee Line Item (Payee (T1))</relationshipLabel>
        <relationshipName>Payment_Header_Payee_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payee_T2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payee (T2)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Outlet, Wholesales (CN)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Header Payee Line Item (Payee (T2))</relationshipLabel>
        <relationshipName>Payment_Header_Payee_Line_Item1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Payment_Request__c</fullName>
        <label>Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipName>Payment_Header_Payee_Line_Itme</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Promotion_Type__c</fullName>
        <formula>TEXT( ASI_CRM_CN_Payment_Request__r.ASI_TH_CRM_Contract__r.ASI_TH_CRM_Promotion_Type__c )</formula>
        <label>Promotion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_RFM_Name__c</fullName>
        <formula>ASI_CRM_CN_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_RFM__r.ASI_CRM_CN_Chinese_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_RVP_Name__c</fullName>
        <formula>ASI_CRM_CN_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_CCity__r.ASI_CRM_CN_Area__r.ASI_CRM_Division__r.ASI_CRM_Region__r.ASI_CRM_RVP__r.ASI_CRM_CN_Chinese_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RVP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Reason__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Regional_Accountant_Email__c</fullName>
        <label>Regional Accountant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sales_Email__c</fullName>
        <label>Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T1_Email__c</fullName>
        <label>T1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T1_Name__c</fullName>
        <formula>ASI_CRM_CN_Payee_Name_T1__r.ASI_CRM_CN_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T2_Email__c</fullName>
        <label>T2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_T2_Name__c</fullName>
        <formula>ASI_CRM_CN_Payee_Name_T2_lookup__r.ASI_CRM_CN_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_WS_Manager_Email__c</fullName>
        <label>WS Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Day_Instuction_Sent__c</fullName>
        <formula>NOW() - ASI_CRM_CN_Instruction_Sent_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since instruction sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <formula>ASI_CRM_CN_Payment_Request__r.ASI_CRM_CN_OutletWS__r.ASI_CRM_CN_Division_Name__c</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <label>Payment Header Payee Line Item</label>
    <listViews>
        <fullName>ASI_CRM_CN_Cash_Payee</fullName>
        <columns>OBJECT_ID</columns>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Invoice_Number__c</columns>
        <columns>ASI_CRM_CN_Payment_Request__c</columns>
        <columns>ASI_CRM_CN_Promotion_Type__c</columns>
        <columns>ASI_CRM_CN_Cash_Payee_Name_T1__c</columns>
        <columns>ASI_CRM_CN_Payment_Date__c</columns>
        <columns>ASI_CRM_CN_Comfirm_Receipt__c</columns>
        <columns>ASI_CRM_CN_ETL_Success__c</columns>
        <columns>ASI_CRM_CN_JDE_Paid_Amt__c</columns>
        <columns>ASI_CRM_CN_JDE_Document_Number__c</columns>
        <columns>ASI_CRM_CN_JDE_Batch_Number__c</columns>
        <columns>ASI_CRM_CN_JDE_EDI_Transaction_Number__c</columns>
        <columns>ASI_CRM_CN_Amount__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payee</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>equals</operation>
            <value>Cash</value>
        </filters>
        <label>CN Cash Payment</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_Finance_GC</group>
            <group>ASI_CRM_CN_Finance_GN</group>
            <group>ASI_CRM_CN_Finance_GS</group>
            <group>ASI_CRM_CN_Finance_HQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Discount_Payee</fullName>
        <columns>ASI_CRM_CN_Invoice_Number__c</columns>
        <columns>ASI_CRM_CN_Outlet_Name__c</columns>
        <columns>ASI_CRM_CN_Payment_Request__c</columns>
        <columns>ASI_CRM_CN_Promotion_Type__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T1__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T2_lookup__c</columns>
        <columns>ASI_CRM_CN_Amount__c</columns>
        <columns>ASI_CRM_CN_Payment_Date__c</columns>
        <columns>ASI_CRM_CN_Comfirm_Receipt__c</columns>
        <columns>ASI_CRM_CN_Instruction_Send__c</columns>
        <columns>ASI_CRM_CN_Instruction_Sent_Time__c</columns>
        <columns>ASI_CRM_CN_ETL_Success__c</columns>
        <columns>ASI_CRM_CN_JDE_Paid_Amt__c</columns>
        <columns>ASI_CRM_CN_JDE_Batch_Number__c</columns>
        <columns>ASI_CRM_CN_JDE_Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_PH_Payee_Line_Item__c.ASI_CRM_CN_Payee</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Type__c</field>
            <operation>equals</operation>
            <value>Discount,Others</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Payment_Request__c</field>
            <operation>contains</operation>
        </filters>
        <label>CN Payee (Discount)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_Finance_GC</group>
            <group>ASI_CRM_CN_Finance_GN</group>
            <group>ASI_CRM_CN_Finance_GS</group>
            <group>ASI_CRM_CN_Finance_HQ</group>
            <roleAndSubordinates>ASI_CN_Finance_Manager_C</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_Finance_Manager_GN</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_Finance_Manager_GS</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Invoice_Number__c</columns>
        <columns>ASI_CRM_CN_Payment_Request__c</columns>
        <columns>ASI_CRM_CN_Cash_Payee_Name_T1__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T1__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T2__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T2_lookup__c</columns>
        <columns>ASI_CRM_CN_Payee_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Search</fullName>
        <columns>ASI_CRM_CN_Type__c</columns>
        <columns>ASI_CRM_CN_Invoice_Number__c</columns>
        <columns>ASI_CRM_CN_Payment_Request__c</columns>
        <columns>ASI_CRM_CN_ETL_Success__c</columns>
        <columns>ASI_CRM_CN_JDE_EDI_Batch_Number__c</columns>
        <columns>ASI_CRM_CN_JDE_EDI_Transaction_Number__c</columns>
        <columns>ASI_CRM_CN_Cash_Payee_Name_T1__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T1__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T2__c</columns>
        <columns>ASI_CRM_CN_Payee_Name_T2_lookup__c</columns>
        <columns>ASI_CRM_CN_Payee_Name__c</columns>
        <columns>ASI_CRM_CN_Instruction_Send__c</columns>
        <columns>ASI_CRM_CN_Instruction_Send_Date__c</columns>
        <columns>ASI_CRM_CN_Instruction_Sent_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_CN_Payment_Request__c</field>
            <operation>contains</operation>
            <value>21170112-010</value>
        </filters>
        <label>All - Search</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Header Payee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Header Payee Line Item</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payee</fullName>
        <active>true</active>
        <label>CN Payee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Remarks</fullName>
        <active>false</active>
        <description>When Amount &lt; 0 , remarks is required.</description>
        <errorConditionFormula>ASI_CRM_CN_Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>ASI_CRM_CN_Reason__c</errorDisplayField>
        <errorMessage>Please fill in remarks.</errorMessage>
    </validationRules>
</CustomObject>